fix: simplify logging, remove FQCNs, extract magic string, fix titleLocked stale data
- Merge redundant dev/default logback profiles, set prod to INFO
- Replace fully qualified class names with imports in ChannelControllerIT
- Extract 'anthropic' exclusion into EXCLUDED_PROVIDERS constant
- SessionTitleSyncer.apply returns boolean; translator only emits SessionMetaUpdated
  when title was actually applied, preventing stale titleLocked: false
- Add test for skipped SessionMetaUpdated when title is locked

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>